--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ session.*
 /home/.emacs.d/projectile-bookmarks.eld
 /home/.emacs.d/.cask
 /home/.emacs.d/ac-comphist.dat
+/home/.emacs.d/image-dired/
