--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ session.*
 /home/.emacs.d/.mc-lists.el
 /home/.emacs.d/prog/workbench.xmi
 /home/.emacs.d/general/custom.el
+/home/.emacs.d/smex-items
+/home/.emacs.d/jabber-history/
+/home/.emacs.d/ido.last
