--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ session.*
 /home/.emacs.d/elpa/
 /home/.cask/
 /home/.emacs.d/auto-save-list/
+/home/.emacs.d/.mc-lists.elc
+/home/.emacs.d/places
+/home/.emacs.d/bookmarks
